--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,6 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
-  /* overflow: hidden; */
-  /* height: 100vh; */
 }
 
 h1 {
@@ -40,9 +38,9 @@ h1 {
 }
 
 .pokemon .img-container {
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   border-radius: 50%;
-  width: 120px; 
+  width: 120px;
   height: 120px;
   text-align: center;
 }
