--- a/src/App.css
+++ b/src/App.css
@@ -95,9 +95,19 @@ h1 {
 }
 
 .title {
-  font-size: 5em;
+  font-size: 6em;
   font-family: 'Pokemon Solid', sans-serif;
-  text-shadow: 5px 5px rgb(52,106,189);
+  /* text-shadow: 5px 5px rgb(52,106,189); */
+  text-shadow: -6px -6px 0px rgb(52,106,189),
+  0px -6px 0px rgb(52,106,189),
+  6px -6px 0px rgb(52,106,189),
+ -6px  0px 0px rgb(52,106,189),
+  6px  0px 0px rgb(52,106,189),
+ -6px  6px 0px rgb(52,106,189),
+  0px  6px 0px rgb(52,106,189),
+  6px  6px 0px rgb(52,106,189);;
+  /* -moz-text-shadow: 0 0 2px #000;
+  -webkit-text-shadow: 0 0 2px #000; */
   color: rgb(255,205,0);
   text-align: center;
 }
