--- a/src/App.css
+++ b/src/App.css
@@ -132,11 +132,9 @@ h1 {
   background-color: #fff;
   border-radius: 40px;
   box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
-  margin: 10px;
-  padding: 40px;
+  margin: 15px;
+  padding: 25px;
   text-align: center;
-  /* width: 100%;
-  height: 100%; */
 }
 
 .pokemon .img-container {
@@ -367,7 +365,17 @@ button a {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 4em;
+  }
 
+  .pokemon .img-container {
+    width: 200px;
+    height: 200px;
+  }
 
-
-
+  .pokemon .info .number {
+    font-size: 0.6em;
+  }
+}
