--- a/src/App.css
+++ b/src/App.css
@@ -365,40 +365,49 @@ button a {
   text-decoration: none;
 }
 
-@media only screen and (max-width: 600px) {
-  .title {
-    font-size: 4em;
+/* style the button */
+button.back-to-top-button {
+  background-image: url('/src/assets/pokeArrow.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 7em;
+  width: 7em;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  position: fixed;
+  bottom: 20px;
+  right: 40px;    
+  opacity: 0;
+  transition: opacity 2s ease-out !important;;
+  transition: opacity 2s ease-in !important;;    }
+  
+  button.back-to-top-button.show {
+    opacity: 1;
+    transition: opacity 2s ease-in !important;;
   }
-
-  .pokemon .img-container {
-    width: 200px;
-    height: 200px;
+  
+  @media only screen and (max-width: 600px) {
+    .title {
+      font-size: 4em;
+    }
+  
+    .pokemon .img-container {
+      width: 200px;
+      height: 200px;
+    }
+  
+    .pokemon .info .number {
+      font-size: 0.6em;
+    }
   }
-
-  .pokemon .info .number {
-    font-size: 0.6em;
-  }
-}
-
-    /* style the button */
+  
+  @media only screen and (max-width: 480px) {
     button.back-to-top-button {
-      background-image: url('/src/assets/pokeArrow.png');
-      background-repeat: no-repeat;
-      background-size: contain;
-      height: 7em;
-      width: 7em;
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      outline: none;
-      position: fixed;
-      bottom: 20px;
-      right: 40px;    
-      opacity: 0;
-      transition: opacity 2s ease-out !important;;
+      height: 5em;
+      width: 5em;
+      bottom: 10px;
+      right: 20px;
     }
-    
-    button.back-to-top-button.show {
-      opacity: 1;
-    }
-    
+  }
