--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.cdnfonts.com/css/pokemon-solid');
 
 *, *:before, *:after {
-  /* -webkit-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 body {
@@ -150,6 +150,12 @@ h1 {
   margin-top: 20px;
 }
 
+.pokemon-card-img {
+  width: 300px; /* or any other value you want to increase the size to */
+  height: 300px; /* or any other value you want to increase the size to */
+}
+
+
 .pokemon .info {
   margin-top: 20px;
 }
@@ -179,25 +185,6 @@ h1 {
   font-weight: 700;
   opacity: 0.5;
 }
-
-/* .btn {
-  background: #f5f5f5 linear-gradient(#f5f5f5,#f1f1f1) repeat-x;
-  border-radius:7px;
-  border: 1px solid #c6c6c6;
-  color: black;
-  padding: 1.2rem 1.5rem;
-  min-width: 35%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 40px auto;
-  padding:20px 16px;
-}
-
-.btn:hover{
-  background: black;
-  color: white;
-} */
 
 body .btn-bg {
   width: 100%;
