--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,26 @@ body {
   margin: 0;
 }
 
+.dark-mode {
+  position: absolute;
+  top: 40px;
+  right: 40px;
+  font-size: 3.5em;
+  border: none;
+  outline: none;
+  background: none;
+}
+
+.dark-mode :hover {
+outline-color: rgb(160, 7, 7);}
+
+
+.dark-gradient {
+  background: #222;
+  background: linear-gradient(to right, #111, #333);
+}
+
+
 h1 {
   letter-spacing: 3px;
 }
@@ -259,6 +279,7 @@ body .btn-bg.Pokemon .btn-group .ball button .pokemon-ball {
   width: 100%;
   height: 100%;
   z-index: 9;
+  background: #fff;
 }
 
 body .btn-bg.Pokemon .btn-group .ball button .pokemon-ball::before,
@@ -275,9 +296,25 @@ body .btn-bg.Pokemon .btn-group .ball button .pokemon-ball::after {
   transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
 }
 
+body .btn-bg.Pokemon .btn-group .ball button:hover .pokemon-ball::before,
+body .btn-bg.Pokemon .btn-group .ball button:hover .pokemon-ball::after {
+  position: absolute;
+  content: 'More!';
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background: #ef594f;
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.25s;
+  text-align: center;
+  font-size: 1.5em;
+  line-height: 50px;
+}
+
 body .btn-bg.Pokemon .btn-group .ball button .pokemon-ball::after {
-top: 50%;
-background: #fff;
+  top: 50%;
+  background: #fff;
 }
 
 body .btn-bg.Pokemon .btn-group .ball button a {
@@ -379,6 +416,10 @@ button.back-to-top-button {
     .title {
       font-size: 4em;
     }
+
+    .dark-mode {
+      font-size: 0.8em;
+    }
   
     .pokemon .img-container {
       width: 200px;
@@ -387,6 +428,10 @@ button.back-to-top-button {
   
     .pokemon .info .number {
       font-size: 0.6em;
+    }
+
+    .btn-bg.Pokemon .btn-group .ball button {
+      font-size: 1.2em;
     }
   }
   
@@ -397,4 +442,32 @@ button.back-to-top-button {
       bottom: 10px;
       right: 20px;
     }
+    .dark-mode {
+      height: 3em;
+      width: 3em;
+    }
+
+    .btn-bg.Pokemon .btn-group .ball button {
+      font-size: 1em;
+    }
   }
+
+  @media only screen and (max-width: 768px) {
+    .pokemon-card-img {
+      width: 100%;
+      height: auto;
+    }
+
+    .dark-mode {
+      position: relative;
+      top: auto;
+      right: auto;
+      margin: 20px;
+    }
+  
+    .pokemon .img-container {
+      width: 100%;
+      height: auto;
+    }
+  }
+  
