--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,7 @@ h1 {
   margin: 15px;
   padding: 25px;
   text-align: center;
+  /* width: 25%; */
 }
 
 .pokemon .img-container {
@@ -419,6 +420,10 @@ button.back-to-top-button {
     .dark-mode {
       font-size: 0.8em;
     }
+
+    /* .pokemon {
+      width: 50%; /* Set the width of the Pokemon cards to be 50% of the container on screens with a width of 600px or less */
+    
   
     .pokemon .img-container {
       width: 200px;
@@ -431,6 +436,14 @@ button.back-to-top-button {
 
     .btn-bg.Pokemon .btn-group .ball button {
       font-size: 1.2em;
+    }
+
+    .poke-container {
+      display: flex;
+      flex-wrap: wrap; /* This will allow the cards to wrap onto a new line when there isn't enough space on the current line */
+      justify-content: space-between;
+      width: 100%;
+      margin: 0 auto;
     }
   }
   
